<resources>
    <string name="app_name">Iwhere</string>
    <string name="item_username">穿41号的司机球迷</string>
    <string name="item_school">大连民族大学</string>
    <string name="item_location">好友定位</string>
    <string name="item_location_open">我的位置</string>
    <string name="item_setting">应用设置</string>
    <string name="item_way">寻找路线</string>
    <string name="item_friend">好友管理</string>
    <string name="item_nearby">附近的人</string>
    <string name="item_friend_find">好友查找</string>
    <string name="item_message">消息管理</string>
    <string name="setting_clean">清除缓存</string>
    <string name="account_info">账号信息</string>
    <string name="setting_push">推送消息</string>
    <string name="setting_about">关于</string>
    <string name="setting_share">推荐给好友</string>
    <string name="setting_opinion">意见反馈</string>
    <string name="quit_button">退出登陆</string>
    <string name="search_friend">搜索</string>
    <string name="mylongitude">我的经度</string>
    <string name="mylatitude">我的纬度</string>
    <string name="mydetail">详细位置</string>
    <string name="str_userstatus">当前状态:</string>
    <string name="userstatus">离线</string>
    <string name="location_detail">详细地址</string>
    <string name="str_traffic">离我最近的交通方式</string>
    <string name="str_bus">公交站</string>
    <string name="str_subway">地铁站</string>
    <string name="show_mylocation">显示我的位置</string>
    <string name="str_nearbybuild">离我最近的标志物</string>
    <string name="user_already_in_contactlist">好友已存在</string>
    <string name="nearby_no_friend">啊哦，附近没有小伙伴，换个地方试试</string>
    <string name="nearby_find_friend">正在搜索附近的小伙伴</string>
    <string name="no_net_error">网络不给力，请稍后再试吧</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sdk_service_check">SDK service check</string>

</resources>
